--- a/main.css
+++ b/main.css
@@ -75,10 +75,10 @@ a:hover {
 	width: 200px;
 	padding-left: 200px;
 }
-.contactsImg > img {
+img {
 	opacity: 0.6;
 }
-.contactsImg > img:hover {
+img:hover {
 	opacity: 1;
 }
 #front {
